@@ -90,7 +90,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -115,7 +117,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -140,7 +144,9 @@ public class JDK15TagFactory {
               true,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -165,7 +171,9 @@ public class JDK15TagFactory {
               false,
               true,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -191,7 +199,9 @@ public class JDK15TagFactory {
               false,
               false,
               groups,
+              true,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -217,7 +227,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               groups,
+              true,
               false,
               false,
               false,
@@ -242,7 +254,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               true,
               false,
               false,
@@ -267,7 +281,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               true,
               false,
@@ -292,7 +308,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               true,
@@ -317,7 +335,9 @@ public class JDK15TagFactory {
               false,
               false,
               new String[0],
+              false,
               new String[0],
+              false,
               false,
               false,
               false,
@@ -344,7 +364,9 @@ public class JDK15TagFactory {
       boolean beforeTest,
       boolean afterTest,
       String[] beforeGroups,
+      boolean isBeforeGroups,
       String[] afterGroups,
+      boolean isAfterGroups,
       boolean beforeClass,
       boolean afterClass,
       boolean beforeMethod,
@@ -361,6 +383,8 @@ public class JDK15TagFactory {
       long timeOut,
       String[] groupFilters) {
     ConfigurationAnnotation result = new ConfigurationAnnotation();
+    result.setIsBeforeGroups(isBeforeGroups);
+    result.setIsAfterGroups(isAfterGroups);
     result.setFakeConfiguration(true);
     result.setBeforeSuite(beforeSuite);
     result.setAfterSuite(afterSuite);
